# LAP

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  NOTICE  README.md  SECURITY.md  benchmark_doclean.py  benchmark_verbose.py  pyproject.toml  requirements.txt
.claude/commands/: release.md
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml  spec-request.yml
.github/workflows/: ci.yml  issue-automation.yml  publish-npm.yml  tests.yml
benchmarks/: BENCHMARK_REPORT.md  COMPLETION_SUMMARY.md  LIVE_BENCHMARK_README.md  README_FULL_BENCHMARK.md  agent_test.py  baseline_comparison.py  benchmark.py  benchmark_all.py  benchmark_skill.py  big_benchmark_config.json  blind_agent_benchmark.py  build_benchmark.py  full_agent_benchmark.py  full_test_tasks.yaml  implementation_benchmark.py  live_benchmark.py  report.py  run_all.py  run_benchmark.py  run_full_v2.py  spawn_batch.py  test_tasks.yaml  validate.py
benchmarks/big_benchmark/: README.md  doclean_discord.txt  doclean_github-core.txt  doclean_hetzner.txt  doclean_launchdarkly.txt  doclean_petstore.txt  doclean_plaid.txt  doclean_resend.txt  doclean_snyk.txt  doclean_stripe-charges.txt  doclean_twitter.txt  run_benchmark.py  spawn_manifest.json  task_doclean_discord.txt  task_doclean_github-core.txt  task_doclean_hetzner.txt  task_doclean_launchdarkly.txt  verbose_discord.txt  (+25 more)
cli/: __init__.py  main.py
core/: __init__.py  converter.py  differ.py  parser.py  utils.py
docs/: BLIND_AGENT_BENCHMARK_PLAN.md  MCP_SOLUTION.md  SPEC.md  benchmark-agent-test-report.md  contributing.md  faq.md  getting-started.md  guide-compile.md  guide-diff.md  guide-integrate.md  guide-registry.md  guide-toollean.md  reference-api.md  reference-cli.md  reference-spec.md  smithy-implementation-summary.md
examples/: sendgrid.yaml  slack.yaml
falsification/: live_results.json  results.json  run_all_tests.py  run_tests.js
integrations/: README.md  __init__.py  test_integrations.py
lap/: __init__.py
output/: agent_results.json  asana.doclean  asana.lean.doclean  box.doclean  box.lean.doclean  circleci.doclean  circleci.lean.doclean  cloudflare.doclean  cloudflare.lean.doclean  digitalocean.doclean  digitalocean.lean.doclean  discord.doclean  discord.lean.doclean  github-core.doclean  github-core.lean.doclean  github-core.verbose.md  gitlab.doclean  gitlab.lean.doclean  google-maps.doclean  google-maps.lean.doclean  hetzner.doclean  hetzner.lean.doclean  launchdarkly.doclean  launchdarkly.lean.doclean  linode.doclean  linode.lean.doclean  netlify.doclean  netlify.lean.doclean  notion.doclean  notion.lean.doclean  openai-core.doclean  openai-core.lean.doclean  openai-core.verbose.md  petstore.doclean  petstore.lean.doclean  plaid.doclean  plaid.lean.doclean  resend.doclean  resend.lean.doclean  sendgrid.doclean  (+26 more)
private/: ENVIRONMENTAL_IMPACT.md  PITCH_DECK.md  POSITIONING.md  README.md  lap_architecture_diagram.html
registry/: README.md  client.py  server.py
scripts/: extract_mcp_tools.py
tests/: test_agent_implementation.py  test_asyncapi_compiler.py  test_cli_auth.py  test_differ.py  test_graphql_compiler.py  test_integration.py  test_lap_skill.py  test_parser.py  test_postman_compiler.py  test_protobuf_compiler.py  test_quality_bugs.py  test_roundtrip.py  test_search.py  test_skill_compiler.py  test_skill_update.py  test_smithy_compiler.py  test_toollean.py  test_version.py
website/: index.html
(+372 files in other folders)
